# bu_banking

./: .gitignore  README  README.md  SETUP.md  STUDENT_GUIDE.md  acr122u-bridge.py  credentials.env  db.sqlite3  docker-compose.yml  launch-local-terminal.ps1  local-terminal.py  pyproject.toml  requirements.txt
banking/: models.py  serializers.py  signals.py  tests.py  tests_default_accounts.py  tests_user_account.py  urls.py  views.py
banking/management/commands/: import_transactions.py  (+2 more)
banking/migrations/: 0001_initial.py  0002_card_network_card_number.py  0003_accountuser_lastlogin_alter_account_account_number_and_more.py  0004_remove_accountuser_lastlogin.py  0005_transaction_latitude_transaction_location_label_and_more.py  0006_userloginlocation.py  0007_userprofile.py  0008_userprofile_date_of_birth.py  0009_remove_userprofile_address_userprofile_county_and_more.py  0010_remove_userprofile_phone_userprofile_phone_home_and_more.py  0011_userprofile_password_changed_at.py  0012_account_round_up_increment.py
banking/services/: payment_network.py
banking/tests/: tests.py  tests_default_accounts.py  tests_user_account.py
banking/views/: account_view.py  api_views.py  auth_views.py  business_view.py  network_view.py  payment_network_views.py  registration_view.py  template_views.py  transaction_view.py  transfer_view.py  user_registration_view.py
bu_banking_terminal/: balance-lookup.md  local-terminal.py  requirements.txt
extra_credit_union/: settings.py  urls.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
(+110 files in other folders)
